# ras_4dig_7seg

./: Cargo.toml  README.md  memory.x  setup.sh
.cargo/: config.toml
src/: main.rs  memo.rs
