[package]
name = "ras_4dig_7seg"
version = "0.1.0"
edition = "2024"

[dependencies]
# from https://github.com/embassy-rs/embassy/blob/main/examples/rp235x/Cargo.toml
# I replaced 'path' section with git = "" + package = ""

embassy-embedded-hal = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy.git", package = "embassy-embedded-hal", features = ["defmt"] }
embassy-sync = { version = "0.7.2", git = "https://github.com/embassy-rs/embassy.git", package = "embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.9.0", git = "https://github.com/embassy-rs/embassy.git", package = "embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy.git", package = "embassy-time", features = ["defmt", "defmt-timestamp-uptime" ] }
embassy-rp = { version = "0.9.0", git = "https://github.com/embassy-rs/embassy.git", package = "embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { version = "0.5.1", git = "https://github.com/embassy-rs/embassy.git", package = "embassy-usb", features = ["defmt"] }
embassy-net = { version = "0.8.0", git = "https://github.com/embassy-rs/embassy.git", package = "embassy-net", features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6", "multicast"] }
embassy-net-wiznet = { version = "0.2.1", git = "https://github.com/embassy-rs/embassy.git", package = "embassy-net-wiznet", features = ["defmt"] }
embassy-futures = { version = "0.1.2", git = "https://github.com/embassy-rs/embassy.git", package = "embassy-futures" }
embassy-usb-logger = { version = "0.5.1", git = "https://github.com/embassy-rs/embassy.git", package = "embassy-usb-logger" }
cyw43 = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.9.0", git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
fixed = "1.23.1"
fixed-macro = "1.2"

reqwless = { git = "https://github.com/drogue-iot/reqwless", rev = "68f703dfc16e6f7f964b7238c922c0d433118872", features = ["defmt"] }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.5.1"

assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "bd22cb7a92031fb16f74a5da42469d466c33383e" }

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
mipidsi = "0.8.0"
display-interface = "0.5.0"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.4.0"
heapless = "0.9"
usbd-hid = "0.9.0"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
embedded-storage = { version = "0.3" }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
rand = { version = "0.9.0", default-features = false }
embedded-sdmmc = "0.7.0"
datealgo = { version = "0.2.1", default-features = false }

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true

[package.metadata.embassy]
build = [
  { target = "thumbv6m-none-eabi", artifact-dir = "out/examples/rp" }
]
